--- a/views/login.html
+++ b/views/login.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
 <html>
     <head>
         <meta charset=“UTF-8”>
-        <title>Sign Up</title>
+        <title>Login</title>
         <link rel=“stylesheet” href=“style.css”>
     </head>
     <body>
@@ -17,9 +16,9 @@
             <input id="phone_number" type="text" name="phone_number"><br>
             <label for="password">Password</label><br>
             <input id="password" type="text" name="password"><br>
-            <input type="submit" value="Create Account">
+            <input type="submit" value="Login">
         </form>
-        <a href="/users/login">Already Have An Account?</a>
+        <a href="/">Don't Have An Account?</a>
             <script src=“main.js”></script>
             <script src="https://media.twiliocdn.com/sdk/js/common/v0.1/twilio-common.min.js"></script>
             <script src="https://media.twiliocdn.com/sdk/js/chat/v2.0/twilio-chat.min.js"></script>
