--- a/views/new_contact.html
+++ b/views/new_contact.html
@@ -11,20 +11,14 @@
             <a href="/contacts">Contacts</a>
             <a href="/users/login">Login</a>
         </nav>
-        <div class="main-container">
-        <div class="border-container">
-        <form action="/contacts/create_message" method="GET">
-            {{#contactsData}}
-            <input type="radio" name="contact" value={{id}}> {{name}}
-            {{phone_number}}
-            <button action="/contacts/delete" method="DELETE">Delete</button><br>
-            {{/contactsData}}
-        <input type="submit" value="Chat">
+        <form action="/contacts" method="POST">
+            <label for="name">Name</label><br>
+            <input id="name" type="text" name="name"><br>
+            <label for="phone_number">Phone Number</label><br>
+            <input id="phone_number" type="text" name="phone_number"><br>
+            <input type="submit" value="Add Contact">
         </form>
-        </div>
-        </div>
-        <a href="/contacts/new">Add Contact</a>
-            <!-- <script src=“main.js”></script> -->
+            <script src=“main.js”></script>
             <script src="https://media.twiliocdn.com/sdk/js/common/v0.1/twilio-common.min.js"></script>
             <script src="https://media.twiliocdn.com/sdk/js/chat/v2.0/twilio-chat.min.js"></script>
     </body>
