--- a/views/create_message.html
+++ b/views/create_message.html
@@ -23,7 +23,7 @@
             <input class ="send_button" type="submit" value="Send">
       </form>
         </form>
-        <script src=“main.js”></script>
+        <script src="main.js"></script>
         <script src="https://media.twiliocdn.com/sdk/js/common/v0.1/twilio-common.min.js"></script>
 <script src="https://media.twiliocdn.com/sdk/js/chat/v2.0/twilio-chat.min.js"></script>
     </body>
