--- a/views/new_contact.html
+++ b/views/new_contact.html
@@ -22,7 +22,7 @@
             </div>
             <input class="button" type="submit" value="Add">
         </form>
-            <script src=“main.js”></script>
+            <script src="main.js"></script>
             <script src="https://media.twiliocdn.com/sdk/js/common/v0.1/twilio-common.min.js"></script>
             <script src="https://media.twiliocdn.com/sdk/js/chat/v2.0/twilio-chat.min.js"></script>
     </body>
