--- a/views/edit_contact.html
+++ b/views/edit_contact.html
@@ -11,7 +11,7 @@
             <a class="nav-links" href="/contacts">Contacts</a>
             <a class="nav-links" href="/users/login">Login</a>
         </nav>
-        <form class="form" action="/:contact={{id}}" method="PUT">
+        <form id="edit_form" class="form" action="/contacts/update" method="PUT">
             {{#contactData}}
             <div class="input">
                 <label class="label" for="name">Name</label><br>
@@ -21,10 +21,15 @@
                 <label class="label" for="phone_number">Phone Number</label><br>
                 <input class="textfield-line" id="phone_number" type="text" name="phone_number" value={{phone_number}}><br>
             </div>
-            <input class="button" type="submit" value="Add">
+            <input type="hidden" name="id" value="{{id}}">
+            <input class="button" id="update_button" type="submit" value="Update">
             {{/contactData}}
         </form>
-            <script src=“main.js”></script>
+        <script
+              src="http://code.jquery.com/jquery-3.3.1.min.js"
+              integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+              crossorigin="anonymous"></script>
+            <script src="/main.js"></script>
             <script src="https://media.twiliocdn.com/sdk/js/common/v0.1/twilio-common.min.js"></script>
             <script src="https://media.twiliocdn.com/sdk/js/chat/v2.0/twilio-chat.min.js"></script>
     </body>
