--- a/views/login.html
+++ b/views/login.html
@@ -28,7 +28,7 @@
             </form>
             <a id="login" href="/">Create Account</a>
         </div>
-            <!-- <script src=“main.js”></script> -->
+            <script src="main.js"></script>
             <script src="https://media.twiliocdn.com/sdk/js/common/v0.1/twilio-common.min.js"></script>
             <script src="https://media.twiliocdn.com/sdk/js/chat/v2.0/twilio-chat.min.js"></script>
     </body>
