--- a/views/messages.html
+++ b/views/messages.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav class="nav">
-            <a class="nav-links" href="/messages">Messages</a>
+            <!-- <a class="nav-links" href="/messages">Messages</a> -->
             <a class="nav-links" href="/contacts">Contacts</a>
             <a class="nav-links" href="/users/login">Login</a>
             <div class="contact_name_header">
