--- a/views/contacts.html
+++ b/views/contacts.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="contact_buttons">
                     <a href="contacts/edit_contact?contact={{id}}" class="edit_button">Edit</a>
-                    <a href="#" id="delete" class="delete_button">Delete</a>
+                    <button data-id="{{id}}" class="delete_button">Delete</button>
                 </div>
             </div>
             <hr>
@@ -34,7 +34,7 @@
               src="http://code.jquery.com/jquery-3.3.1.min.js"
               integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
               crossorigin="anonymous"></script>
-            <script src="main.js"></script>
+            <script src="/main.js"></script>
             <script src="https://media.twiliocdn.com/sdk/js/common/v0.1/twilio-common.min.js"></script>
             <script src="https://media.twiliocdn.com/sdk/js/chat/v2.0/twilio-chat.min.js"></script>
     </body>
