--- a/views/messages.html
+++ b/views/messages.html
@@ -16,6 +16,7 @@
                 {{/contactData}}
             </div>
         </nav>
+            <a href="/contacts" class="back_button">Back</a>
         <div class="message_container">
             {{#messageData}}
                 <div class="message_bubble">
@@ -37,7 +38,7 @@
             </div>
         </div>
         </form>
-        <script src="main.js"></script>
+        <script src="/main.js"></script>
         <script src="https://media.twiliocdn.com/sdk/js/common/v0.1/twilio-common.min.js"></script>
 <script src="https://media.twiliocdn.com/sdk/js/chat/v2.0/twilio-chat.min.js"></script>
     </body>
