--- a/public/style.css
+++ b/public/style.css
@@ -268,3 +268,12 @@ hr {
     display: flex;
     justify-content: center;
 }
+
+.back_button {
+    position: fixed;
+    margin-left: 300px;
+    text-decoration: none;
+    color: #5539f1;
+    font-family: avenir;
+    font-size: 16px;
+}
